--- a/Code/mainCounty.ipynb
+++ b/Code/mainCounty.ipynb
@@ -5,16 +5,17 @@
    "id": "4f8647dc",
    "metadata": {},
    "source": [
-    "This file merges multiple datasets together and processes the data"
+    "This file accesses, pre-processes, and merges multiple ACS datasets together. Then NPI table is imported in and merged with the ACS Data."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "c9d3ffe6",
    "metadata": {},
    "outputs": [],
    "source": [
+    "## import libraries\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import re"
@@ -30,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "3dad899a",
    "metadata": {},
    "outputs": [],
@@ -40,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "d1d0a126",
    "metadata": {},
    "outputs": [],
@@ -62,11 +63,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "27efcd3c",
    "metadata": {},
    "outputs": [],
    "source": [
+    "## Function to convert Census Tract value to County\n",
     "def getCounty(name):\n",
     "    county = re.sub(r'\\b(Census Tract\\s+[^;]+;) |;\\s+Colorado', '', name)\n",
     "    return county"
@@ -74,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "00420938",
    "metadata": {},
    "outputs": [
@@ -193,7 +195,7 @@
        "[1423 rows x 3 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -222,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "c9c644e7",
    "metadata": {},
    "outputs": [
@@ -426,7 +428,7 @@
        "[1447 rows x 9 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -478,7 +480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "d4c6843a",
    "metadata": {},
    "outputs": [
@@ -658,7 +660,7 @@
        "[1447 rows x 7 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -682,7 +684,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "7e1b475e",
    "metadata": {},
    "outputs": [
@@ -959,7 +961,7 @@
        "[1447 rows x 14 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -983,7 +985,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "4c0767b8",
    "metadata": {},
    "outputs": [
@@ -1126,7 +1128,7 @@
        "[1447 rows x 5 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1150,7 +1152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "b0513fb2",
    "metadata": {},
    "outputs": [
@@ -1281,7 +1283,7 @@
        "[1447 rows x 4 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1305,7 +1307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "2810c4dd",
    "metadata": {},
    "outputs": [
@@ -1436,7 +1438,7 @@
        "[1447 rows x 4 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1460,7 +1462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "3d0ab0ea",
    "metadata": {},
    "outputs": [
@@ -1847,7 +1849,7 @@
        "[1447 rows x 21 columns]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1879,7 +1881,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "id": "99e524d2",
    "metadata": {},
    "outputs": [],
@@ -1915,12 +1917,12 @@
    "id": "7f5cd43f",
    "metadata": {},
    "source": [
-    "### Create Bins for ACS"
+    "### Create Quantile Bins for ACS"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "id": "9fe11c9d",
    "metadata": {},
    "outputs": [
@@ -2083,7 +2085,7 @@
        "[64 rows x 5 columns]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2104,7 +2106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "id": "45366bcc",
    "metadata": {},
    "outputs": [
@@ -2442,7 +2444,7 @@
        "[64 rows x 18 columns]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2477,7 +2479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "id": "435c86ac",
    "metadata": {},
    "outputs": [
@@ -2840,7 +2842,7 @@
        "[64 rows x 19 columns]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2875,7 +2877,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "id": "d5913e63",
    "metadata": {},
    "outputs": [
@@ -3256,7 +3258,7 @@
        "[64 rows x 26 columns]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3293,7 +3295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "id": "bde6db88",
    "metadata": {},
    "outputs": [
@@ -3579,7 +3581,7 @@
        "[64 rows x 13 columns]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3614,7 +3616,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "id": "e3efc795",
    "metadata": {},
    "outputs": [
@@ -3813,7 +3815,7 @@
        "[64 rows x 8 columns]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3840,7 +3842,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "id": "1e9420b1",
    "metadata": {},
    "outputs": [
@@ -4076,7 +4078,7 @@
        "[64 rows x 10 columns]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4105,7 +4107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "id": "3763cc61",
    "metadata": {},
    "outputs": [
@@ -4492,7 +4494,7 @@
        "[64 rows x 26 columns]"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4536,7 +4538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 22,
    "id": "2069fccd",
    "metadata": {},
    "outputs": [],
@@ -4551,7 +4553,7 @@
    "id": "62c00fd7",
    "metadata": {},
    "source": [
-    "### Check ACS Tables"
+    "### Check ACS Table Columns"
    ]
   },
   {
@@ -4661,6 +4663,14 @@
     "print(f'dp02 T4 - {len(dp02_table4Grouped)}')\n",
     "print(f'b17001 - {len(b17001_tableGrouped)}')\n",
     "print(f's0101 - {len(s0101_tableGrouped)}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5ebedb21",
+   "metadata": {},
+   "source": [
+    "### Create subtables with County info and bins"
    ]
   },
   {
@@ -5129,50 +5139,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "1580f2fb",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "####################################################################\n",
-    "## TEST DATA\n",
-    "# testData = {'NPI': ['1760093470', '1861097982', '1447936901', '1043826795'], \n",
-    "#             'zipPlusFour': ['80237-2857', '81008-2130', '80111-2213', '80111-7957'],    ##Last zipcode is not accurate - just used for testing\n",
-    "#             'taxType': ['NPI-2 Organization', 'NPI-2 Organization', 'NPI-2 Organization', 'NPI-2 Organization'], \n",
-    "#             'primaryTax': ['Yes', 'Yes', 'Yes', 'No'], \n",
-    "#             'Issuer': ['MEDICAID', '', '', ''], \n",
-    "#             'status': ['Active', 'Active', 'Active', 'Active']}\n",
-    "\n",
-    "# ## CREATE TEST DF\n",
-    "# df = pd.DataFrame(testData)\n",
-    "\n",
-    "####################################################################"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
    "id": "11a9193e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "### Import NPI Provider Information\n",
-    "df = pd.read_pickle('df.pkl') "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "id": "110be933",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from zipcodeToCensusTract import convertPostalToLatLong, convertLatLongToCensusTract"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
-   "id": "d9195730",
    "metadata": {},
    "outputs": [
     {
@@ -5401,18 +5368,31 @@
        "[270 rows x 9 columns]"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "### Import NPI Provider Information from another file output\n",
+    "df = pd.read_pickle('df.pkl') \n",
     "df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 28,
+   "id": "110be933",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### Import functions to convert postal to lat/long, and lat/long to Census Tract\n",
+    "from zipcodeToCensusTract import convertPostalToLatLong, convertLatLongToCensusTract"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
    "id": "b71198f3",
    "metadata": {},
    "outputs": [
@@ -5666,7 +5646,7 @@
        "[270 rows x 11 columns]"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5679,7 +5659,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 30,
    "id": "d711ce02",
    "metadata": {},
    "outputs": [
@@ -5728,20 +5708,20 @@
        "Index: []"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "## Check to ensure all zipcodes were converted to Lat and Long\n",
+    "## Check to ensure all zipcodes were converted to Lat and Long (no null)\n",
     "df[df['lat'].isnull()]\n",
     "df[df['long'].isnull()]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 31,
    "id": "788988f2",
    "metadata": {},
    "outputs": [
@@ -6007,7 +5987,7 @@
        "[270 rows x 12 columns]"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6020,19 +6000,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 32,
    "id": "29ab6f89",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "## Change CensusTract to County\n",
-    "df['County'] = df['censusTract'].str[9:14]\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 35,
-   "id": "c1151909",
    "metadata": {},
    "outputs": [
     {
@@ -6309,18 +6278,20 @@
        "[270 rows x 13 columns]"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "## Change CensusTract to County\n",
+    "df['County'] = df['censusTract'].str[9:14]\n",
     "df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 33,
    "id": "016c75f7",
    "metadata": {},
    "outputs": [
@@ -6568,7 +6539,7 @@
        "34  08003               1"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6582,7 +6553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 34,
    "id": "aeee660f",
    "metadata": {},
    "outputs": [
@@ -6969,7 +6940,7 @@
        "[64 rows x 21 columns]"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6982,7 +6953,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 35,
    "id": "0edcf2fd",
    "metadata": {},
    "outputs": [
@@ -6992,7 +6963,7 @@
        "64"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -7004,7 +6975,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 36,
    "id": "5d2a3a21",
    "metadata": {},
    "outputs": [],
@@ -7015,7 +6986,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 37,
    "id": "f6b0146d",
    "metadata": {},
    "outputs": [],
