--- a/Code/hospiceMLCounty.ipynb
+++ b/Code/hospiceMLCounty.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 2,
    "id": "28950413",
    "metadata": {},
    "outputs": [],
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 3,
    "id": "3ae2b52c",
    "metadata": {},
    "outputs": [
@@ -250,20 +250,20 @@
        "[5 rows x 21 columns]"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "### Import mergedTable\n",
+    "### Import mergedTable from mainCounty output\n",
     "mergedTable = pd.read_pickle('mergedTableCounty.pkl')\n",
     "mergedTable.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 4,
    "id": "d1af1bec",
    "metadata": {},
    "outputs": [],
@@ -274,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 5,
    "id": "4bae2555",
    "metadata": {},
    "outputs": [
@@ -406,7 +406,7 @@
        "[64 rows x 3 columns]"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -420,7 +420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 6,
    "id": "e4412fd8",
    "metadata": {},
    "outputs": [
@@ -820,7 +820,7 @@
        "[64 rows x 22 columns]"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -836,13 +836,12 @@
    "id": "5da56480",
    "metadata": {},
    "source": [
-    "### Ordinal Encoding<br>\n",
-    "We are using ordinal encoding because we had categorical data. We also feel comfortable using 1-5 in our encoding process and our bins were created through quantile bins. The distance between low and medium should be roughly the same as medium and high. "
+    "### Ordinal Encoding"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 7,
    "id": "382332df",
    "metadata": {},
    "outputs": [
@@ -874,7 +873,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -886,7 +885,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 8,
    "id": "1bbd1def",
    "metadata": {},
    "outputs": [
@@ -1286,7 +1285,7 @@
        "[64 rows x 22 columns]"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1306,7 +1305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 9,
    "id": "13d908f8",
    "metadata": {},
    "outputs": [],
@@ -1317,7 +1316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 10,
    "id": "83b470fd",
    "metadata": {},
    "outputs": [
@@ -1372,7 +1371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 11,
    "id": "9140ba93",
    "metadata": {},
    "outputs": [
@@ -1429,7 +1428,7 @@
    "id": "083eaa97",
    "metadata": {},
    "source": [
-    "### Since our distribution is so vast and heavily skewed right, I decided to set our target variable as 0 not present vs. 1 present. Maybe then we can evaluate those present only later?"
+    "### Since our distribution is so vast and heavily skewed right, we decided to evaluate the presense of vs lack of hospice providers"
    ]
   },
   {
@@ -1442,7 +1441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 12,
    "id": "2c461d33",
    "metadata": {},
    "outputs": [],
@@ -1461,7 +1460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 13,
    "id": "c42f613d",
    "metadata": {},
    "outputs": [
@@ -1524,7 +1523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 14,
    "id": "f8489730",
    "metadata": {},
    "outputs": [
@@ -1561,7 +1560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 15,
    "id": "dee9cb21",
    "metadata": {},
    "outputs": [
@@ -1612,7 +1611,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 16,
    "id": "c0f14413",
    "metadata": {},
    "outputs": [
@@ -1675,7 +1674,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 17,
    "id": "53692799",
    "metadata": {},
    "outputs": [
@@ -1740,7 +1739,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 18,
    "id": "ebcf3195",
    "metadata": {},
    "outputs": [
@@ -1821,7 +1820,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 19,
    "id": "df417831",
    "metadata": {},
    "outputs": [
@@ -1894,7 +1893,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 20,
    "id": "8ee80282",
    "metadata": {},
    "outputs": [
@@ -1990,7 +1989,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 21,
    "id": "ae814376",
    "metadata": {},
    "outputs": [
@@ -2045,7 +2044,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 22,
    "id": "f4714f92",
    "metadata": {},
    "outputs": [
@@ -2073,44 +2072,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 80,
-   "id": "1b87ace4",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Dummy Accuracy: 0.5385\n",
-      "Dummy Classification Report:\n",
-      "              precision    recall  f1-score   support\n",
-      "\n",
-      "           0       0.00      0.00      0.00         6\n",
-      "           1       0.54      1.00      0.70         7\n",
-      "\n",
-      "    accuracy                           0.54        13\n",
-      "   macro avg       0.27      0.50      0.35        13\n",
-      "weighted avg       0.29      0.54      0.38        13\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "from sklearn.dummy import DummyClassifier\n",
-    "from sklearn.metrics import accuracy_score, classification_report\n",
-    "\n",
-    "dummy = DummyClassifier(strategy = 'most_frequent', random_state = 42)\n",
-    "dummy.fit(X_train, y_train)\n",
-    "\n",
-    "dummy_pred = dummy.predict(X_test)\n",
-    "\n",
-    "print(f\"Dummy Accuracy: {accuracy_score(y_test, dummy_pred):.4f}\")\n",
-    "print(\"Dummy Classification Report:\")\n",
-    "print(classification_report(y_test, dummy_pred, zero_division = 0))"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "12c28999",
    "metadata": {},
@@ -2120,7 +2081,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 23,
    "id": "8da65fdb",
    "metadata": {},
    "outputs": [
@@ -2264,7 +2225,7 @@
        "[64 rows x 4 columns]"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2281,7 +2242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 24,
    "id": "9b325533",
    "metadata": {},
    "outputs": [
@@ -2295,7 +2256,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2308,7 +2269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 25,
    "id": "141debaa",
    "metadata": {},
    "outputs": [
@@ -2464,7 +2425,7 @@
        "[64 rows x 5 columns]"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2477,7 +2438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 26,
    "id": "d559d075",
    "metadata": {},
    "outputs": [
@@ -2584,7 +2545,7 @@
        "[64 rows x 2 columns]"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2600,7 +2561,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 27,
    "id": "2c513e3d",
    "metadata": {},
    "outputs": [
@@ -2765,7 +2726,7 @@
        "[3 rows x 24 columns]"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2785,7 +2746,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 28,
    "id": "c4364407",
    "metadata": {},
    "outputs": [],
@@ -2796,7 +2757,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 29,
    "id": "45e71bf2",
    "metadata": {},
    "outputs": [],
@@ -2806,7 +2767,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 30,
    "id": "05a08744",
    "metadata": {},
    "outputs": [],
@@ -2830,7 +2791,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 31,
    "id": "e5c6873b",
    "metadata": {},
    "outputs": [
@@ -2986,7 +2947,7 @@
        "[132 rows x 5 columns]"
       ]
      },
-     "execution_count": 89,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3013,7 +2974,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 32,
    "id": "f84aed77",
    "metadata": {},
    "outputs": [
@@ -3045,7 +3006,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 90,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3070,7 +3031,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 33,
    "id": "85580a93",
    "metadata": {},
    "outputs": [
@@ -3115,7 +3076,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 34,
    "id": "7c105e0d",
    "metadata": {},
    "outputs": [
@@ -3144,7 +3105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 35,
    "id": "d35aa51b",
    "metadata": {},
    "outputs": [
@@ -3195,7 +3156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 36,
    "id": "0f6dda94",
    "metadata": {},
    "outputs": [
@@ -3258,7 +3219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 37,
    "id": "52a21d14",
    "metadata": {},
    "outputs": [
@@ -3322,7 +3283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 38,
    "id": "583cff28",
    "metadata": {},
    "outputs": [
@@ -3403,7 +3364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 39,
    "id": "44c73159",
    "metadata": {},
    "outputs": [
@@ -3456,7 +3417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 40,
    "id": "5c1ea8c5",
    "metadata": {},
    "outputs": [
@@ -3511,7 +3472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 41,
    "id": "b2c7cfa1",
    "metadata": {},
    "outputs": [
@@ -3541,7 +3502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 42,
    "id": "8d1fb9eb",
    "metadata": {},
    "outputs": [
@@ -3579,7 +3540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 43,
    "id": "cfc89acf",
    "metadata": {},
    "outputs": [
@@ -3686,29 +3647,20 @@
        "[64 rows x 2 columns]"
       ]
      },
-     "execution_count": 119,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "### Import in population count of 65+ individuals per county\n",
     "merged65andOver = pd.read_pickle('merged65andOver.pkl')\n",
     "merged65andOver"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "mergedTableAlz = pd.merge(mergedTableAlz, merged65andOver, on='County Name')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 121,
-   "id": "27197e82",
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -3841,18 +3793,20 @@
        "[2 rows x 23 columns]"
       ]
      },
-     "execution_count": 121,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "## Merged 65+ population with table above\n",
+    "mergedTableAlz = pd.merge(mergedTableAlz, merged65andOver, on='County Name')\n",
     "mergedTableAlz.head(2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 45,
    "id": "25a8c5c7",
    "metadata": {},
    "outputs": [
@@ -3860,7 +3814,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\erinb\\AppData\\Local\\Temp\\ipykernel_22420\\1650094917.py:2: SettingWithCopyWarning: \n",
+      "C:\\Users\\erinb\\AppData\\Local\\Temp\\ipykernel_32432\\1542527012.py:3: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -4063,12 +4017,13 @@
        "34                          2.0   18.0  "
       ]
      },
-     "execution_count": 123,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "### Create scoring table that calculates sums the ordinal bins of top attributes and assess for county with high scores and low number of hospice providers\n",
     "mergedTableAlzFinal = mergedTableAlz[['County Name', 'Provider Count', '65andOverSum', '65andOverBins', 'femaleHouseholderBins', 'civilVetBins', 'hsDegreeBins', 'AD Prevalence Bins(Age 65+)']]\n",
     "mergedTableAlzFinal['Score'] = mergedTableAlzFinal[['65andOverBins', 'femaleHouseholderBins', 'civilVetBins', 'hsDegreeBins', 'AD Prevalence Bins(Age 65+)']].sum(axis = 1)\n",
     "sorted_df = mergedTableAlzFinal.sort_values(by=['Score', 'Provider Count', '65andOverSum'], ascending=[False, True, False])\n",
