--- a/Code/hospiceMLCounty.ipynb
+++ b/Code/hospiceMLCounty.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "28950413",
    "metadata": {},
    "outputs": [],
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "3ae2b52c",
    "metadata": {},
    "outputs": [
@@ -250,20 +250,20 @@
        "[5 rows x 21 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "### Import mergedTable from mainCounty output\n",
-    "mergedTable = pd.read_pickle('mergedTableCounty.pkl')\n",
+    "mergedTable = pd.read_pickle('mergedTableAllCounties.pkl')\n",
     "mergedTable.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "d1af1bec",
    "metadata": {},
    "outputs": [],
@@ -274,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "4bae2555",
    "metadata": {},
    "outputs": [
@@ -406,7 +406,7 @@
        "[64 rows x 3 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -420,7 +420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "e4412fd8",
    "metadata": {},
    "outputs": [
@@ -820,7 +820,7 @@
        "[64 rows x 22 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -841,7 +841,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "382332df",
    "metadata": {},
    "outputs": [
@@ -873,7 +873,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -885,7 +885,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "1bbd1def",
    "metadata": {},
    "outputs": [
@@ -1285,7 +1285,7 @@
        "[64 rows x 22 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1305,7 +1305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "13d908f8",
    "metadata": {},
    "outputs": [],
@@ -1316,7 +1316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "83b470fd",
    "metadata": {},
    "outputs": [
@@ -1371,7 +1371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "9140ba93",
    "metadata": {},
    "outputs": [
@@ -1441,7 +1441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "2c461d33",
    "metadata": {},
    "outputs": [],
@@ -1460,7 +1460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "c42f613d",
    "metadata": {},
    "outputs": [
@@ -1523,7 +1523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "id": "f8489730",
    "metadata": {},
    "outputs": [
@@ -1560,7 +1560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "id": "dee9cb21",
    "metadata": {},
    "outputs": [
@@ -1611,7 +1611,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "id": "c0f14413",
    "metadata": {},
    "outputs": [
@@ -1674,7 +1674,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "id": "53692799",
    "metadata": {},
    "outputs": [
@@ -1739,7 +1739,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "id": "ebcf3195",
    "metadata": {},
    "outputs": [
@@ -1820,7 +1820,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "id": "df417831",
    "metadata": {},
    "outputs": [
@@ -1893,7 +1893,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "id": "8ee80282",
    "metadata": {},
    "outputs": [
@@ -1989,7 +1989,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "id": "ae814376",
    "metadata": {},
    "outputs": [
@@ -2044,7 +2044,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "id": "f4714f92",
    "metadata": {},
    "outputs": [
@@ -2081,7 +2081,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 25,
    "id": "8da65fdb",
    "metadata": {},
    "outputs": [
@@ -2225,7 +2225,7 @@
        "[64 rows x 4 columns]"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2242,7 +2242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 26,
    "id": "9b325533",
    "metadata": {},
    "outputs": [
@@ -2256,7 +2256,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2269,7 +2269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 27,
    "id": "141debaa",
    "metadata": {},
    "outputs": [
@@ -2425,7 +2425,7 @@
        "[64 rows x 5 columns]"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2438,7 +2438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 28,
    "id": "d559d075",
    "metadata": {},
    "outputs": [
@@ -2545,7 +2545,7 @@
        "[64 rows x 2 columns]"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2561,7 +2561,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 29,
    "id": "2c513e3d",
    "metadata": {},
    "outputs": [
@@ -2726,7 +2726,7 @@
        "[3 rows x 24 columns]"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2746,7 +2746,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 30,
    "id": "c4364407",
    "metadata": {},
    "outputs": [],
@@ -2757,7 +2757,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 31,
    "id": "45e71bf2",
    "metadata": {},
    "outputs": [],
@@ -2767,7 +2767,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 32,
    "id": "05a08744",
    "metadata": {},
    "outputs": [],
@@ -2791,7 +2791,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 33,
    "id": "e5c6873b",
    "metadata": {},
    "outputs": [
@@ -2947,7 +2947,7 @@
        "[132 rows x 5 columns]"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2974,7 +2974,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 34,
    "id": "f84aed77",
    "metadata": {},
    "outputs": [
@@ -3006,7 +3006,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3031,7 +3031,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 35,
    "id": "85580a93",
    "metadata": {},
    "outputs": [
@@ -3076,7 +3076,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 36,
    "id": "7c105e0d",
    "metadata": {},
    "outputs": [
@@ -3105,7 +3105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 37,
    "id": "d35aa51b",
    "metadata": {},
    "outputs": [
@@ -3156,7 +3156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 38,
    "id": "0f6dda94",
    "metadata": {},
    "outputs": [
@@ -3219,7 +3219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 39,
    "id": "52a21d14",
    "metadata": {},
    "outputs": [
@@ -3283,7 +3283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 40,
    "id": "583cff28",
    "metadata": {},
    "outputs": [
@@ -3364,7 +3364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 41,
    "id": "44c73159",
    "metadata": {},
    "outputs": [
@@ -3417,7 +3417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 42,
    "id": "5c1ea8c5",
    "metadata": {},
    "outputs": [
@@ -3472,7 +3472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 43,
    "id": "b2c7cfa1",
    "metadata": {},
    "outputs": [
@@ -3502,7 +3502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 44,
    "id": "8d1fb9eb",
    "metadata": {},
    "outputs": [
@@ -3540,7 +3540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 45,
    "id": "cfc89acf",
    "metadata": {},
    "outputs": [
@@ -3647,7 +3647,7 @@
        "[64 rows x 2 columns]"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3660,7 +3660,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -3793,7 +3793,7 @@
        "[2 rows x 23 columns]"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3806,7 +3806,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 47,
    "id": "25a8c5c7",
    "metadata": {},
    "outputs": [
@@ -3814,7 +3814,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\erinb\\AppData\\Local\\Temp\\ipykernel_32432\\1542527012.py:3: SettingWithCopyWarning: \n",
+      "C:\\Users\\erinb\\AppData\\Local\\Temp\\ipykernel_11252\\1542527012.py:3: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -4017,7 +4017,7 @@
        "34                          2.0   18.0  "
       ]
      },
-     "execution_count": 45,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
